minor rename inside config

--- a/appsettings.json
+++ b/appsettings.json
@@ -12,7 +12,7 @@
         }
       ],
       "RomFileExtensions": [ ".zip" ],
-      "InternalCore": {
+      "BlastRetroCore": {
         "CoreFileName": "MAMUEV.so",
         "AutoLaunch": false, /* for arcade, mame cue files will be used */
         "Files": [
@@ -70,7 +70,7 @@
         }
       ],
       "RomFileExtensions": [ ".nes", ".fsd", ".fc" ],
-      "InternalCore": {
+      "BlastRetroCore": {
         "CoreFileName": "NEMUEV.so",
         "AutoLaunch": true,
         "Files": [
@@ -130,7 +130,7 @@
       ],
       "RomFileExtensions": [ ".a26" ],
       "AltFileExtensions": [ ".bin" ],
-      "InternalCore": {
+      "BlastRetroCore": {
         "CoreFileName": "AEMUEV.so",
         "AutoLaunch": true,
         "Files": [
@@ -168,7 +168,7 @@
         }
       ],
       "RomFileExtensions": [ ".a78" ],
-      "InternalCore": {
+      "BlastRetroCore": {
         "CoreFileName": "A7EMUEV.so",
         "AutoLaunch": true,
         "Files": [
@@ -193,7 +193,7 @@
         }
       ],
       "RomFileExtensions": [ ".sfc", ".smc" ],
-      "InternalCore": {
+      "BlastRetroCore": {
         "CoreFileName": "FEMUEV.so",
         "AutoLaunch": true,
         "Files": [
@@ -243,7 +243,7 @@
         }
       ],
       "RomFileExtensions": [ ".gb" ],
-      "InternalCore": {
+      "BlastRetroCore": {
         "CoreFileName": "MGBAEV.so",
         "AutoLaunch": true,
         "Files": [
@@ -268,7 +268,7 @@
         }
       ],
       "RomFileExtensions": [ ".gbc" ],
-      "InternalCore": {
+      "BlastRetroCore": {
         "CoreFileName": "MGBAEV.so",
         "AutoLaunch": true,
         "Files": [
@@ -293,7 +293,7 @@
         }
       ],
       "RomFileExtensions": [ ".gba", ".agb" ],
-      "InternalCore": {
+      "BlastRetroCore": {
         "CoreFileName": "MGBAEV.so",
         "AutoLaunch": true,
         "Files": [
@@ -317,7 +317,7 @@
         }
       ],
       "RomFileExtensions": [ ".ccd", ".img", ".sub", ".pbp", ".iso" ],
-      "InternalCore": {
+      "BlastRetroCore": {
         "CoreFileName": "PCSXEV.so",
         "AutoLaunch": true,
         "Files": [
@@ -341,7 +341,7 @@
         }
       ],
       "RomFileExtensions": [ ".lnx" ],
-      "InternalCore": {
+      "BlastRetroCore": {
         "CoreFileName": "LYNX.so",
         "AutoLaunch": false,
         "Files": [
@@ -365,7 +365,7 @@
         }
       ],
       "RomFileExtensions": [ ".sms" ],
-      "InternalCore": {
+      "BlastRetroCore": {
         "CoreFileName": "SMSEV.so",
         "AutoLaunch": true,
         "Files": [
@@ -392,7 +392,7 @@
         "exec.bin",
         "grom.bin"
       ],
-      "InternalCore": {
+      "BlastRetroCore": {
         "CoreFileName": "FREEINTV.so",
         "AutoLaunch": false,
         "Files": [
@@ -416,7 +416,7 @@
         }
       ],
       "RomFileExtensions": [ ".gg" ],
-      "InternalCore": {
+      "BlastRetroCore": {
         "CoreFileName": "SGG.so",
         "AutoLaunch": false,
         "Files": [
@@ -439,7 +439,7 @@
         }
       ],
       "RomFileExtensions": [ ".pce" ],
-      "InternalCore": {
+      "BlastRetroCore": {
         "CoreFileName": "PCENG.so",
         "AutoLaunch": false,
         "Files": [
@@ -463,7 +463,7 @@
         }
       ],
       "RomFileExtensions": [ ".ws" ],
-      "InternalCore": {
+      "BlastRetroCore": {
         "CoreFileName": "WSWAN.so",
         "AutoLaunch": false,
         "Files": [
@@ -487,7 +487,7 @@
         }
       ],
       "RomFileExtensions": [ ".wsc" ],
-      "InternalCore": {
+      "BlastRetroCore": {
         "CoreFileName": "WSWAN.so",
         "AutoLaunch": false,
         "Files": [
@@ -511,7 +511,7 @@
       ],
       "RomFileExtensions": [ ".sv" ],
       "AltFileExtensions": [ ".bin" ],
-      "InternalCore": {
+      "BlastRetroCore": {
         "CoreFileName": "POTATOR.so",
         "AutoLaunch": false,
         "Files": [
@@ -551,7 +551,7 @@
       "BiosFiles": [
         "o2rom.bin"
       ],
-      "InternalCore": {
+      "BlastRetroCore": {
         "CoreFileName": "O2EM.so",
         "AutoLaunch": false,
         "Files": [
