--- a/appsettings.json
+++ b/appsettings.json
@@ -39,7 +39,7 @@
           "CoreFileName": "mame2003_libretro.so",
           "Files": [
             {
-              "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/mame2003_libretro.so.zip",
+              "SourceUrl": "http://eversd.com/cores/mame2003_libretro.so",
               "SourcePath": "mame2003_libretro.so",
               "TargetPath": "retroarch/cores/mame2003_libretro.so"
             }
@@ -50,7 +50,7 @@
           "CoreFileName": "mame2003_plus_libretro.so",
           "Files": [
             {
-              "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/mame2003_plus_libretro.so.zip",
+              "SourceUrl": "http://eversd.com/cores/mame2003_plus_libretro.so",
               "SourcePath": "mame2003_plus_libretro.so",
               "TargetPath": "retroarch/cores/mame2003_plus_libretro.so"
             }
@@ -87,7 +87,7 @@
           "CoreFileName": "fceumm_libretro.so",
           "Files": [
             {
-              "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/fceumm_libretro.so.zip",
+              "SourceUrl": "http://eversd.com/cores/fceumm_libretro.so",
               "SourcePath": "fceumm_libretro.so",
               "TargetPath": "retroarch/cores/fceumm_libretro.so"
             }
@@ -98,7 +98,7 @@
           "CoreFileName": "nestopia_libretro.so",
           "Files": [
             {
-              "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/nestopia_libretro.so.zip",
+              "SourceUrl": "http://eversd.com/cores/nestopia_libretro.so",
               "SourcePath": "nestopia_libretro.so",
               "TargetPath": "retroarch/cores/nestopia_libretro.so"
             }
@@ -109,7 +109,7 @@
           "CoreFileName": "quicknes_libretro.so",
           "Files": [
             {
-              "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/quicknes_libretro.so.zip",
+              "SourceUrl": "http://eversd.com/cores/quicknes_libretro.so",
               "SourcePath": "quicknes_libretro.so",
               "TargetPath": "retroarch/cores/quicknes_libretro.so"
             }
@@ -147,7 +147,7 @@
           "CoreFileName": "stella2014_libretro.so",
           "Files": [
             {
-              "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/stella2014_libretro.so.zip",
+              "SourceUrl": "http://eversd.com/cores/stella2014_libretro.so",
               "SourcePath": "stella2014_libretro.so",
               "TargetPath": "retroarch/cores/stella2014_libretro.so"
             }
@@ -502,7 +502,7 @@
     {
       "Id": 16,
       "Alias": "supervision",
-      "Name": "Watara Supervision",
+      "Name": "Supervision",
       "TGDB_PlatformIds": [
         {
           "Id": 4959,
@@ -516,8 +516,7 @@
         "AutoLaunch": false,
         "Files": [
           {
-            "SourceUrl": "https://github.com/EverSD-Cart/EverLoader/releases/download/1.0.0/potator_libretro.zip",
-            "SourcePath": "potator_libretro.so",
+            "SourceUrl": "http://eversd.com/cores/potator_libretro.so",
             "TargetPath": "POTATOR.so"
           }
         ]
@@ -528,8 +527,7 @@
           "CoreFileName": "potator_libretro.so",
           "Files": [
             {
-              "SourceUrl": "https://github.com/EverSD-Cart/EverLoader/releases/download/1.0.0/potator_libretro.zip",
-              "SourcePath": "potator_libretro.so",
+              "SourceUrl": "http://eversd.com/cores/potator_libretro.so",
               "TargetPath": "retroarch/cores/potator_libretro.so"
             }
           ]
