--- a/EverLoader.csproj
+++ b/EverLoader.csproj
@@ -60,6 +60,9 @@
     <Compile Update="Forms\ProgressForm.cs">
       <SubType>Form</SubType>
     </Compile>
+	<Compile Update="Forms\AboutBox.cs">
+		<SubType>Form</SubType>
+	</Compile>
   </ItemGroup>
 
 </Project>
