some groundwork for coming retroarch support

--- a/appsettings.json
+++ b/appsettings.json
@@ -128,11 +128,10 @@
           "Name": "Atari 2600"
         }
       ],
-      "RomFileExtensions": [ ".a26" ],
-      "AltFileExtensions": [ ".bin" ],
+      "RomFileExtensions": [ ".a26", ".bin" ],
       "BlastRetroCore": {
         "CoreFileName": "AEMUEV.so",
-        "AutoLaunch": true,
+        "AutoLaunch": false, // note: .a26 can auto-launch, but .bin not (as .bin will auto-launch Sega Genesis)
         "Files": [
           {
             "SourceUrl": "https://eversd.com/onewebmedia/EverFixer_data.zip",
@@ -316,7 +315,7 @@
           "Name": "Sony Playstation"
         }
       ],
-      "RomFileExtensions": [ ".ccd", ".img", ".sub", ".pbp", ".iso" ],
+      "RomFileExtensions": [ ".ccd", ".img", ".sub", ".pbp", ".iso", ".chd" ],
       "BlastRetroCore": {
         "CoreFileName": "PCSXEV.so",
         "AutoLaunch": true,
@@ -509,8 +508,7 @@
           "Name": "Watara Supervision"
         }
       ],
-      "RomFileExtensions": [ ".sv" ],
-      "AltFileExtensions": [ ".bin" ],
+      "RomFileExtensions": [ ".sv", ".bin" ],
       "BlastRetroCore": {
         "CoreFileName": "POTATOR.so",
         "AutoLaunch": false,
@@ -544,8 +542,7 @@
           "Name": "Magnavox Odyssey 2"
         }
       ],
-      "RomFileExtensions": [ ".od2" ], //made-up rom file extension
-      "AltFileExtensions": [ ".bin" ],
+      "RomFileExtensions": [ ".bin" ],
       "BiosFiles": [
         "o2rom.bin"
       ],
