when sync to SD: overwrite if target files are older

--- a/appsettings.json
+++ b/appsettings.json
@@ -318,7 +318,7 @@
       "RomFileExtensions": [ ".ccd", ".img", ".sub", ".pbp", ".iso", ".chd" ],
       "BlastRetroCore": {
         "CoreFileName": "PCSXEV.so",
-        "AutoLaunch": true,
+        "AutoLaunch": false,
         "Files": [
           {
             "SourceUrl": "https://eversd.com/onewebmedia/EverFixer_data.zip",
