--- a/appsettings.json
+++ b/appsettings.json
@@ -570,6 +570,34 @@
           ]
         }
       ]
+    },
+    {
+      "Id": 19,
+      "Alias": "amiga",
+      "Name": "Amiga",
+      "TGDB_PlatformIds": [
+        {
+          "Id": 4911,
+          "Name": "Amiga"
+        }
+      ],
+      "RomFileExtensions": [ ".adf", ".adz" ],
+      "BiosFiles": [
+        "kick34005.A500"
+      ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "PUAE",
+          "CoreFileName": "puae_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/puae_libretro.so.zip",
+              "SourcePath": "puae_libretro.so",
+              "TargetPath": "retroarch/cores/puae_libretro.so"
+            }
+          ]
+        }
+      ]
     }
   ],
   "Genres": [
