--- a/appsettings.json
+++ b/appsettings.json
@@ -575,6 +575,7 @@
       "Id": 19,
       "Alias": "amiga",
       "Name": "Amiga",
+      "Group": "Commodore",
       "TGDB_PlatformIds": [
         {
           "Id": 4911,
@@ -594,6 +595,32 @@
               "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/puae_libretro.so.zip",
               "SourcePath": "puae_libretro.so",
               "TargetPath": "retroarch/cores/puae_libretro.so"
+            }
+          ]
+        }
+      ]
+    },
+    {
+      "Id": 20,
+      "Alias": "c64",
+      "Name": "Commodore 64",
+      "Group": "Commodore",
+      "TGDB_PlatformIds": [
+        {
+          "Id": 40,
+          "Name": "Commodore 64"
+        }
+      ],
+      "RomFileExtensions": [ ".prg" ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "VICE",
+          "CoreFileName": "vice_x64_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/vice_x64_libretro.so.zip",
+              "SourcePath": "vice_x64_libretro.so",
+              "TargetPath": "retroarch/cores/vice_x64_libretro.so"
             }
           ]
         }
