support for required and optional BIOS files

--- a/appsettings.json
+++ b/appsettings.json
@@ -388,8 +388,14 @@
       ],
       "RomFileExtensions": [ ".int" ],
       "BiosFiles": [
-        "exec.bin",
-        "grom.bin"
+        {
+          "FileName": "exec.bin",
+          "Required": true
+        },
+        {
+          "FileName": "grom.bin",
+          "Required": true
+        }
       ],
       "BlastRetroCore": {
         "CoreFileName": "FREEINTV.so",
@@ -544,7 +550,10 @@
       ],
       "RomFileExtensions": [ ".bin" ],
       "BiosFiles": [
-        "o2rom.bin"
+        {
+          "FileName": "o2rom.bin",
+          "Required": true
+        }
       ],
       "BlastRetroCore": {
         "CoreFileName": "O2EM.so",
@@ -584,7 +593,10 @@
       ],
       "RomFileExtensions": [ ".adf", ".adz" ],
       "BiosFiles": [
-        "kick34005.A500"
+        {
+          "FileName": "kick34005.A500",
+          "Required": false
+        }
       ],
       "RetroArchCores": [
         {
