re-added amiga and c64 retroarch support

--- a/appsettings.json
+++ b/appsettings.json
@@ -40,7 +40,6 @@
           "Files": [
             {
               "SourceUrl": "http://eversd.com/cores/mame2003_libretro.so",
-              "SourcePath": "mame2003_libretro.so",
               "TargetPath": "retroarch/cores/mame2003_libretro.so"
             }
           ]
@@ -51,7 +50,6 @@
           "Files": [
             {
               "SourceUrl": "http://eversd.com/cores/mame2003_plus_libretro.so",
-              "SourcePath": "mame2003_plus_libretro.so",
               "TargetPath": "retroarch/cores/mame2003_plus_libretro.so"
             }
           ]
@@ -88,7 +86,6 @@
           "Files": [
             {
               "SourceUrl": "http://eversd.com/cores/fceumm_libretro.so",
-              "SourcePath": "fceumm_libretro.so",
               "TargetPath": "retroarch/cores/fceumm_libretro.so"
             }
           ]
@@ -99,7 +96,6 @@
           "Files": [
             {
               "SourceUrl": "http://eversd.com/cores/nestopia_libretro.so",
-              "SourcePath": "nestopia_libretro.so",
               "TargetPath": "retroarch/cores/nestopia_libretro.so"
             }
           ]
@@ -110,7 +106,6 @@
           "Files": [
             {
               "SourceUrl": "http://eversd.com/cores/quicknes_libretro.so",
-              "SourcePath": "quicknes_libretro.so",
               "TargetPath": "retroarch/cores/quicknes_libretro.so"
             }
           ]
@@ -147,7 +142,6 @@
           "Files": [
             {
               "SourceUrl": "http://eversd.com/cores/stella2014_libretro.so",
-              "SourcePath": "stella2014_libretro.so",
               "TargetPath": "retroarch/cores/stella2014_libretro.so"
             }
           ]
@@ -580,64 +574,64 @@
         }
       ]
     },
-    //{
-    //  "Id": 19,
-    //  "Alias": "amiga",
-    //  "Name": "Amiga",
-    //  "Group": "Commodore",
-    //  "TGDB_PlatformIds": [
-    //    {
-    //      "Id": 4911,
-    //      "Name": "Amiga"
-    //    }
-    //  ],
-    //  "RomFileExtensions": [ ".adf", ".adz" ],
-    //  "BiosFiles": [
-    //    {
-    //      "FileName": "kick34005.A500",
-    //      "Required": false
-    //    }
-    //  ],
-    //  "RetroArchCores": [
-    //    {
-    //      "DisplayName": "PUAE",
-    //      "CoreFileName": "puae_libretro.so",
-    //      "Files": [
-    //        {
-    //          "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/puae_libretro.so.zip",
-    //          "SourcePath": "puae_libretro.so",
-    //          "TargetPath": "retroarch/cores/puae_libretro.so"
-    //        }
-    //      ]
-    //    }
-    //  ]
-    //},
-    //{
-    //  "Id": 20,
-    //  "Alias": "c64",
-    //  "Name": "Commodore 64",
-    //  "Group": "Commodore",
-    //  "TGDB_PlatformIds": [
-    //    {
-    //      "Id": 40,
-    //      "Name": "Commodore 64"
-    //    }
-    //  ],
-    //  "RomFileExtensions": [ ".prg" ],
-    //  "RetroArchCores": [
-    //    {
-    //      "DisplayName": "VICE",
-    //      "CoreFileName": "vice_x64_libretro.so",
-    //      "Files": [
-    //        {
-    //          "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/vice_x64_libretro.so.zip",
-    //          "SourcePath": "vice_x64_libretro.so",
-    //          "TargetPath": "retroarch/cores/vice_x64_libretro.so"
-    //        }
-    //      ]
-    //    }
-    //  ]
-    //}
+    {
+      "Id": 19,
+      "Alias": "amiga",
+      "Name": "Amiga",
+      "Group": "Commodore",
+      "TGDB_PlatformIds": [
+        {
+          "Id": 4911,
+          "Name": "Amiga"
+        }
+      ],
+      "RomFileExtensions": [ ".adf", ".adz" ],
+      "BiosFiles": [
+        {
+          "FileName": "kick34005.A500",
+          "Required": false
+        }
+      ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "PUAE",
+          "CoreFileName": "puae_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/puae_libretro.so.zip",
+              "SourcePath": "puae_libretro.so",
+              "TargetPath": "retroarch/cores/puae_libretro.so"
+            }
+          ]
+        }
+      ]
+    },
+    {
+      "Id": 20,
+      "Alias": "c64",
+      "Name": "Commodore 64",
+      "Group": "Commodore",
+      "TGDB_PlatformIds": [
+        {
+          "Id": 40,
+          "Name": "Commodore 64"
+        }
+      ],
+      "RomFileExtensions": [ ".prg" ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "VICE",
+          "CoreFileName": "vice_x64_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/vice_x64_libretro.so.zip",
+              "SourcePath": "vice_x64_libretro.so",
+              "TargetPath": "retroarch/cores/vice_x64_libretro.so"
+            }
+          ]
+        }
+      ]
+    }
   ],
   "Genres": [
     {
