fix: 0-byte pointer file now different from gameid, so screenshot directory can be created

--- a/appsettings.json
+++ b/appsettings.json
@@ -35,23 +35,21 @@
       },
       "RetroArchCores": [
         {
-          "DisplayName": "MAME 2013",
+          "DisplayName": "MAME 2003",
           "CoreFileName": "mame2003_libretro.so",
           "Files": [
             {
               "SourceUrl": "http://eversd.com/cores/mame2003_libretro.so",
-              "SourcePath": "mame2003_libretro.so",
               "TargetPath": "retroarch/cores/mame2003_libretro.so"
             }
           ]
         },
         {
-          "DisplayName": "MAME 2013-Plus",
+          "DisplayName": "MAME 2003-Plus",
           "CoreFileName": "mame2003_plus_libretro.so",
           "Files": [
             {
               "SourceUrl": "http://eversd.com/cores/mame2003_plus_libretro.so",
-              "SourcePath": "mame2003_plus_libretro.so",
               "TargetPath": "retroarch/cores/mame2003_plus_libretro.so"
             }
           ]
@@ -69,7 +67,7 @@
           "Name": "NES"
         }
       ],
-      "RomFileExtensions": [ ".nes", ".fsd", ".fc" ],
+      "RomFileExtensions": [ ".nes", ".fds", ".fc" ],
       "BlastRetroCore": {
         "CoreFileName": "NEMUEV.so",
         "AutoLaunch": true,
@@ -88,7 +86,6 @@
           "Files": [
             {
               "SourceUrl": "http://eversd.com/cores/fceumm_libretro.so",
-              "SourcePath": "fceumm_libretro.so",
               "TargetPath": "retroarch/cores/fceumm_libretro.so"
             }
           ]
@@ -99,7 +96,6 @@
           "Files": [
             {
               "SourceUrl": "http://eversd.com/cores/nestopia_libretro.so",
-              "SourcePath": "nestopia_libretro.so",
               "TargetPath": "retroarch/cores/nestopia_libretro.so"
             }
           ]
@@ -110,7 +106,6 @@
           "Files": [
             {
               "SourceUrl": "http://eversd.com/cores/quicknes_libretro.so",
-              "SourcePath": "quicknes_libretro.so",
               "TargetPath": "retroarch/cores/quicknes_libretro.so"
             }
           ]
@@ -147,7 +142,6 @@
           "Files": [
             {
               "SourceUrl": "http://eversd.com/cores/stella2014_libretro.so",
-              "SourcePath": "stella2014_libretro.so",
               "TargetPath": "retroarch/cores/stella2014_libretro.so"
             }
           ]
