more work on supporting RA core extensions

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,13 +5,13 @@
       "Id": 1,
       "Alias": "arcade",
       "Name": "Arcade",
+      "SupportedExtensions": [ ".zip" ],
       "TGDB_PlatformIds": [
         {
           "Id": 23,
           "Name": "Arcade"
         }
       ],
-      "RomFileExtensions": [ ".zip" ],
       "BlastRetroCore": {
         "CoreFileName": "MAMUEV.so",
         "AutoLaunch": false, /* for arcade, mame cue files will be used */
@@ -61,15 +61,23 @@
       "Alias": "nes",
       "Name": "NES",
       "Group": "Nintendo",
+      "SupportedExtensions": [ ".nes", ".fds", ".fc" ],
       "TGDB_PlatformIds": [
         {
           "Id": 7,
           "Name": "NES"
         }
       ],
-      "RomFileExtensions": [ ".nes", ".fds", ".fc" ],
+      "BiosFiles": [
+        {
+          "FileName": "disksys.rom",
+          "SupportedExtensions": [ ".fds" ],
+          "Required": true
+        }
+      ],
       "BlastRetroCore": {
         "CoreFileName": "NEMUEV.so",
+        //"SupportedExtensions": [ ".nes", ".fds", ".fc" ],
         "AutoLaunch": true,
         "Files": [
           {
@@ -83,6 +91,7 @@
         {
           "DisplayName": "FCEUMM",
           "CoreFileName": "fceumm_libretro.so",
+          "SupportedExtensions": [ ".nes", ".fds" ],
           "Files": [
             {
               "SourceUrl": "http://eversd.com/cores/fceumm_libretro.so",
@@ -93,6 +102,7 @@
         {
           "DisplayName": "Nestopia",
           "CoreFileName": "nestopia_libretro.so",
+          "SupportedExtensions": [ ".nes", ".fds" ],
           "Files": [
             {
               "SourceUrl": "http://eversd.com/cores/nestopia_libretro.so",
@@ -103,6 +113,7 @@
         {
           "DisplayName": "QuickNES",
           "CoreFileName": "quicknes_libretro.so",
+          "SupportedExtensions": [ ".nes" ],
           "Files": [
             {
               "SourceUrl": "http://eversd.com/cores/quicknes_libretro.so",
@@ -117,16 +128,16 @@
       "Alias": "atari2600",
       "Name": "2600",
       "Group": "Atari",
+      "SupportedExtensions": [ ".a26", ".bin" ],
       "TGDB_PlatformIds": [
         {
           "Id": 22,
           "Name": "Atari 2600"
         }
       ],
-      "RomFileExtensions": [ ".a26", ".bin" ],
       "BlastRetroCore": {
         "CoreFileName": "AEMUEV.so",
-        "AutoLaunch": false, // note: .a26 can auto-launch, but .bin not (as .bin will auto-launch Sega Genesis)
+        "AutoLaunch": false, //because for autolaunch .bin roms will launch Sega Genesis emulator (BlastEm)
         "Files": [
           {
             "SourceUrl": "https://eversd.com/onewebmedia/EverFixer_data.zip",
@@ -145,22 +156,32 @@
               "TargetPath": "retroarch/cores/stella2014_libretro.so"
             }
           ]
+        },
+        {
+          "DisplayName": "Stella", //TODO: test
+          "CoreFileName": "stella6_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "https://eversd.com/onewebmedia/EverFixer_data.zip",
+              "SourcePath": "AEMUEV.so",
+              "TargetPath": "retroarch/cores/stella_libretro.so"
+            }
+          ]
         }
-      ],
-      "GoogleSuffix": "atari 2600"
+      ]
     },
     {
       "Id": 4,
       "Alias": "atari7800",
       "Name": "7800",
       "Group": "Atari",
+      "SupportedExtensions": [ ".a78" ],
       "TGDB_PlatformIds": [
         {
           "Id": 27,
           "Name": "Atari 7800"
         }
       ],
-      "RomFileExtensions": [ ".a78" ],
       "BlastRetroCore": {
         "CoreFileName": "A7EMUEV.so",
         "AutoLaunch": true,
@@ -171,21 +192,20 @@
             "TargetPath": "A7EMUEV.so"
           }
         ]
-      },
-      "GoogleSuffix": "atari 7800"
+      }
     },
     {
       "Id": 5,
       "Alias": "snes",
       "Name": "SNES",
       "Group": "Nintendo",
+      "SupportedExtensions": [ ".sfc", ".smc" ],
       "TGDB_PlatformIds": [
         {
           "Id": 6,
           "Name": "SNES"
         }
       ],
-      "RomFileExtensions": [ ".sfc", ".smc" ],
       "BlastRetroCore": {
         "CoreFileName": "FEMUEV.so",
         "AutoLaunch": true,
@@ -203,39 +223,39 @@
       "Alias": "megadrive",
       "Name": "Mega Drive",
       "Group": "Sega",
+      "SupportedExtensions": [ ".smd", ".md" ],
       "TGDB_PlatformIds": [
         {
           "Id": 36,
           "Name": "Sega Mega Drive"
         }
-      ],
-      "RomFileExtensions": [ ".smd", ".md" ]
+      ]
     },
     {
       "Id": 61,
       "Alias": "genesis",
       "Name": "Genesis",
       "Group": "Sega",
+      "SupportedExtensions": [ ".gen", ".bin" ],
       "TGDB_PlatformIds": [
         {
           "Id": 18,
           "Name": "Sega Genesis"
         }
-      ],
-      "RomFileExtensions": [ ".gen" , ".bin" ]
+      ]
     },
     {
       "Id": 7,
       "Alias": "gb",
       "Name": "Game Boy",
       "Group": "Nintendo",
+      "SupportedExtensions": [ ".gb" ],
       "TGDB_PlatformIds": [
         {
           "Id": 4,
           "Name": "Game Boy"
         }
       ],
-      "RomFileExtensions": [ ".gb" ],
       "BlastRetroCore": {
         "CoreFileName": "MGBAEV.so",
         "AutoLaunch": true,
@@ -254,13 +274,13 @@
       "Name": "Game Boy Color",
       "Group": "Nintendo",
       "GroupItemSortOrder": 2,
+      "SupportedExtensions": [ ".gbc" ],
       "TGDB_PlatformIds": [
         {
           "Id": 41,
           "Name": "Game Boy Color"
         }
       ],
-      "RomFileExtensions": [ ".gbc" ],
       "BlastRetroCore": {
         "CoreFileName": "MGBAEV.so",
         "AutoLaunch": true,
@@ -279,13 +299,13 @@
       "Name": "Game Boy Advance",
       "Group": "Nintendo",
       "GroupItemSortOrder": 3,
+      "SupportedExtensions": [ ".gba", ".agb" ],
       "TGDB_PlatformIds": [
         {
           "Id": 5,
           "Name": "Game Boy Advance"
         }
       ],
-      "RomFileExtensions": [ ".gba", ".agb" ],
       "BlastRetroCore": {
         "CoreFileName": "MGBAEV.so",
         "AutoLaunch": true,
@@ -303,13 +323,13 @@
       "Alias": "psx",
       "Name": "Playstation 1",
       "Group": "Sony",
+      "SupportedExtensions": [ ".ccd", ".img", ".sub", ".pbp", ".iso", ".chd" ],
       "TGDB_PlatformIds": [
         {
           "Id": 10,
           "Name": "Sony Playstation"
         }
       ],
-      "RomFileExtensions": [ ".ccd", ".img", ".sub", ".pbp", ".iso", ".chd" ],
       "BlastRetroCore": {
         "CoreFileName": "PCSXEV.so",
         "AutoLaunch": false,
@@ -327,13 +347,13 @@
       "Alias": "atarilynx",
       "Name": "Lynx",
       "Group": "Atari",
+      "SupportedExtensions": [ ".lnx" ],
       "TGDB_PlatformIds": [
         {
           "Id": 4924,
           "Name": "Atari Lynx"
         }
       ],
-      "RomFileExtensions": [ ".lnx" ],
       "BlastRetroCore": {
         "CoreFileName": "LYNX.so",
         "AutoLaunch": false,
@@ -351,13 +371,13 @@
       "Alias": "mastersystem",
       "Name": "Master System",
       "Group": "Sega",
+      "SupportedExtensions": [ ".sms" ],
       "TGDB_PlatformIds": [
         {
           "Id": 35,
           "Name": "Sega Master System"
         }
       ],
-      "RomFileExtensions": [ ".sms" ],
       "BlastRetroCore": {
         "CoreFileName": "SMSEV.so",
         "AutoLaunch": true,
@@ -374,13 +394,13 @@
       "Id": 11,
       "Alias": "intellivision",
       "Name": "Intellivision",
+      "SupportedExtensions": [ ".int" ],
       "TGDB_PlatformIds": [
         {
           "Id": 32,
           "Name": "Intellivision"
         }
       ],
-      "RomFileExtensions": [ ".int" ],
       "BiosFiles": [
         {
           "FileName": "exec.bin",
@@ -408,13 +428,13 @@
       "Alias": "gamegear",
       "Name": "Game Gear",
       "Group": "Sega",
+      "SupportedExtensions": [ ".gg" ],
       "TGDB_PlatformIds": [
         {
           "Id": 20,
           "Name": "Sega Game Gear"
         }
       ],
-      "RomFileExtensions": [ ".gg" ],
       "BlastRetroCore": {
         "CoreFileName": "SGG.so",
         "AutoLaunch": false,
@@ -431,13 +451,13 @@
       "Id": 13,
       "Alias": "pcengine",
       "Name": "PC Engine",
+      "SupportedExtensions": [ ".pce" ],
       "TGDB_PlatformIds": [
         {
           "Id": 34,
           "Name": "TurboGrafx 16"
         }
       ],
-      "RomFileExtensions": [ ".pce" ],
       "BlastRetroCore": {
         "CoreFileName": "PCENG.so",
         "AutoLaunch": false,
@@ -455,13 +475,13 @@
       "Alias": "wonderswan",
       "Name": "WonderSwan",
       "Group": "Bandai",
+      "SupportedExtensions": [ ".ws" ],
       "TGDB_PlatformIds": [
         {
           "Id": 4925,
           "Name": "WonderSwan"
         }
       ],
-      "RomFileExtensions": [ ".ws" ],
       "BlastRetroCore": {
         "CoreFileName": "WSWAN.so",
         "AutoLaunch": false,
@@ -479,13 +499,13 @@
       "Alias": "wonderswancolor",
       "Name": "WonderSwan Color",
       "Group": "Bandai",
+      "SupportedExtensions": [ ".wsc" ],
       "TGDB_PlatformIds": [
         {
           "Id": 4926,
           "Name": "WonderSwan Color"
         }
       ],
-      "RomFileExtensions": [ ".wsc" ],
       "BlastRetroCore": {
         "CoreFileName": "WSWAN.so",
         "AutoLaunch": false,
@@ -502,13 +522,13 @@
       "Id": 16,
       "Alias": "supervision",
       "Name": "Supervision",
+      "SupportedExtensions": [ ".sv", ".bin" ],
       "TGDB_PlatformIds": [
         {
           "Id": 4959,
           "Name": "Watara Supervision"
         }
       ],
-      "RomFileExtensions": [ ".sv", ".bin" ],
       "BlastRetroCore": {
         "CoreFileName": "POTATOR.so",
         "AutoLaunch": false,
@@ -536,13 +556,13 @@
       "Id": 17,
       "Alias": "odyssey2",
       "Name": "Odyssey 2",
+      "SupportedExtensions": [".bin" ],
       "TGDB_PlatformIds": [
         {
           "Id": 4927,
           "Name": "Magnavox Odyssey 2"
         }
       ],
-      "RomFileExtensions": [ ".bin" ],
       "BiosFiles": [
         {
           "FileName": "o2rom.bin",
@@ -579,13 +599,13 @@
       "Alias": "c64",
       "Name": "Commodore 64",
       "Group": "Commodore",
+      "SupportedExtensions": [ ".prg" ],
       "TGDB_PlatformIds": [
         {
           "Id": 40,
           "Name": "Commodore 64"
         }
       ],
-      "RomFileExtensions": [ ".prg" ],
       "RetroArchCores": [
         {
           "DisplayName": "VICE",
@@ -605,13 +625,13 @@
       "Alias": "amiga",
       "Name": "Amiga",
       "Group": "Commodore",
+      "SupportedExtensions": [ ".adf", ".adz" ],
       "TGDB_PlatformIds": [
         {
           "Id": 4911,
           "Name": "Amiga"
         }
       ],
-      "RomFileExtensions": [ ".adf", ".adz" ],
       "BiosFiles": [
         {
           "FileName": "kick34005.A500",
